Closed
Bug 638067
Opened 14 years ago
Closed 14 years ago
IndexedDB: Inserting data with multiple indexes on an autoIncrement object store throws an error
Categories
(Core :: Storage: IndexedDB, defect)
Core
Storage: IndexedDB
Tracking
()
RESOLVED
FIXED
| Tracking | Status | |
|---|---|---|
| status2.0 | --- | .1-fixed |
People
(Reporter: bosselmann, Assigned: bent.mozilla)
Details
(Whiteboard: [fx4-unco-bugday] fixed-on-aurora)
Attachments
(2 files)
|
1.10 KB,
text/html
|
Details | |
|
6.77 KB,
patch
|
sdwilsh
:
review+
christian
:
approval2.0+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10_6_6; de-de) AppleWebKit/533.19.4 (KHTML, like Gecko) Version/5.0.3 Safari/533.19.4
Build Identifier: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.6; rv:2.0b12) Gecko/20100101 Firefox/4.0b12
When you create an objectStore with multiple indexes and you try to add data, which has more than one property fitting to indexes, it fails. For better explanation have a look at the testcase.
Reproducible: Always
Steps to Reproduce:
1. Create objectStore with multiple indexes
2. Try to add data, like you can see in the testcase
Actual Results:
Got an error-event with errorCode = 4
Expected Results:
Should get a success-event
| Reporter | ||
Comment 1•14 years ago
|
||
| Reporter | ||
Updated•14 years ago
|
Version: unspecified → Trunk
Comment 2•14 years ago
|
||
The testcase produces the reported error using Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0) Gecko/20100101 Firefox/4.0
Status: UNCONFIRMED → NEW
Ever confirmed: true
Whiteboard: [fx4-unco-bugday]
| Assignee | ||
Comment 3•14 years ago
|
||
Sigh, this edge case was magically untouched by our tests.
| Assignee | ||
Comment 4•14 years ago
|
||
A inconvenient workaround is to not use autoIncrement object stores for the time being.
Summary: IndexedDB: Inserting data with multiple indexes throws an error → IndexedDB: Inserting data with multiple indexes on an autoIncrement object store throws an error
Comment 5•14 years ago
|
||
Comment on attachment 518794 [details] [diff] [review]
Patch, v1
r=sdwilsh
Attachment #518794 -
Flags: review?(sdwilsh) → review+
| Assignee | ||
Comment 6•14 years ago
|
||
Requesting blocking2.0, but I only want this for 2.0.1, not 2.0.
blocking2.0: --- → ?
Updated•14 years ago
|
blocking2.0: ? → .x+
Attachment #518794 -
Flags: approval2.0+
Also, I want this on mozilla-aurora so that we don't regress from Macaw -> FF 5. This is verbal approval because we don't have the flags set up.
| Assignee | ||
Comment 9•14 years ago
|
||
Component: DOM → DOM: IndexedDB
Version: Trunk → unspecified
You need to log in
before you can comment on or make changes to this bug.
Description
•