Bug 638067 - 'IndexedDB: Inserting data with multiple indexes on an autoIncrement object store throws an error'. r=sdwilsh.